# cosmic-goo

./: .gitignore  .readthedocs.yaml  .shellcheckrc  .taplo.toml  CHANGELOG.md  Makefile  README.md  cosmic-goo-landscape.html  goo-walkthrough.html  mkdocs.yml  requirements-docs.txt
completions/: goo.bash
crates/: Cargo.toml
crates/goo/: Cargo.toml
crates/goo-compose/: Cargo.toml
crates/goo-compose-gui/: Cargo.toml
crates/goo-compose-gui/src/: main.rs
crates/goo-compose/src/: dmenu.rs  main.rs
crates/goo-control-gui/: Cargo.toml
crates/goo-control-gui/src/: main.rs
crates/goo-engine/: Cargo.toml  core.toml
crates/goo-engine/examples/: dump_plans.rs  dump_registry.rs
crates/goo-engine/src/: address.rs  adverbs.rs  compose.rs  dispatch.rs  exec.rs  history.rs  inference.rs  lib.rs  mime.rs  negotiation.rs  options.rs  registry.rs  selection.rs  shell.rs  template.rs  verbs.rs
crates/goo/src/: main.rs  untrusted.rs
data/applications/: goo.desktop
doc/: cli-reference.md  control-center.html  distribution.md  index.md  launcher-landscape.html  limitations.md  manual.css  plugin-authoring.md  quickstart.md  the-model.md  tutorial.md
doc/design/: STATUS.md  addressing-and-protocol.md  completion-polish.md  composition-and-effects.md  contact-domain.md  data-entry-ux.md  detection.md  dynamic-verb-providers.md  expansion-candidates.md  facet-trust-boundary.md  goo-protocol.md  negotiation.md  prior-art-and-architecture.md  rust-port-scoping.md
doc/examples/: blq.toml  contacts.toml  duckdb-formats.toml  goo-demo.toml  ms-natural-4000-bindings.md  pipe4.toml
docs/vision/: cosmic-goo-CONTRIBUTING.md  cosmic-goo-README.md  cosmic-goo-design-history.md  cosmic-goo-implementation-plan.md  cosmic-goo-recon-env.sh  cosmic-goo-spec-v1.md  cosmic-goo-spec.md
lib/: address.sh  dialog.sh  dispatch.sh  plugin-loader.sh  selection.sh  toml.sh  types.sh  url-encode.sh  verbs.sh
plugins/: apps.toml  audio.toml  bluetooth.toml  calculator.toml  claude-routing.toml  clipboard-history.toml  containers.toml  content.toml  dispatch.toml.example  emoji.toml  files.toml  git.toml  media.toml  mounts.toml  network.toml  notifications.toml  power.toml  presentation.toml  processes.toml  recent.toml  screenshots.toml  selection.toml  services.toml  sigils.toml  ssh-hosts.toml  text-utilities.toml  text-verbs.toml  tmux.toml  urls.toml  working-directory.toml  workspaces.toml
providers/: README.md
providers/core-linux/: make-targets.toml
providers/dev/: just-recipes.toml
providers/duckdb/: column-profile.toml
providers/git/: branch-log.toml
providers/xdg/: open-with.toml
recon/: findings.md  keys.sh
schema/: cosmic-goo-plugin.schema.json
simulator/: demo-plans.json  demo-registry.json  goo-simulator.html  scenarios.json
tests/: address.bats  complete.bats  completion-script.bats  compose.bats  goo-compose.bats  plugin-loader.bats  plugins.bats  schema.bats  selection.bats  toml.bats  types.bats  url-encode.bats  validate.bats  verbs.bats
tests/fixtures/mime/: globs2  subclasses
tests/integration/: again.bats  cli.bats  cmd-injection.bats  config.bats  confirm.bats  contacts.bats  display-safety.bats  do.bats  entity-cache.bats  entity-inference.bats  execute.bats  explain.bats  extsignal.bats  file-membership.bats  goo-dispatch.bats  hops.bats  implicit-subject.bats  infer.bats  mimedb.bats  options.bats  polymorphic-dispatch.bats  provider-examples.bats  providers.bats  resolve.bats  subject-rank.bats  suggest-415.bats  verb-infer.bats  what.bats  woollama-route.bats
tools/: gen-landscape.py
