# cosmic-goo Rust workspace.
#
# The Rust port of the engine (the bash in lib/ is the reference; the bats suite
# is the conformance contract — see doc/design/rust-port-scoping.md). Crates land
# one slice at a time, each staying green against the same tests.
#
#   goo-engine  — registry / mime / address / template / verbs / dispatch (lib)
#   goo         — thin CLI (bin)            [slice 4 — the parity milestone]
#   goo-compose — picker-driven sentence builder over goo (bin) [v0 dmenu; v1 libcosmic]
#   good        — warm daemon (bin)         [later slice — gated on a launcher consumer]
[workspace]
resolver = "2"
members = ["goo-engine", "goo", "goo-compose"]
