[package]
name = "goo-control-gui"
version = "0.1.0"
edition = "2021"
description = "Native Control Center for goo (iced) — registry browser + entity surface + plugins (v1 read-only); libcosmic swap later"
license = "MIT"

[[bin]]
name = "goo-control-gui"
path = "src/main.rs"

[dependencies]
goo-engine = { path = "../goo-engine" }
serde_json = "1"
iced = "0.14"
