[package]
name = "goo-engine"
version = "0.1.0"
edition = "2021"
description = "cosmic-goo engine — registry, MIME matching, addressing, templating, dispatch"
license = "MIT"

# Deps are introduced deliberately, slice by slice (see
# doc/design/rust-port-scoping.md). Slice 2 adds the registry + addressing, which
# need TOML parsing and a JSON value model (the registry cache is JSON, shared
# with the bash engine).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
percent-encoding = "2"   # template {var|uri} — matches jq @uri
regex = "1"              # dispatch `matches` (bash ERE → POSIX-class compatible)
pathfinding = "4"        # negotiation planner: Dijkstra over the (virtual) converter graph
